--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="navbar-inner">
     <div class="container">
       <ul class="nav pull-right">
@@ -6,4 +6,4 @@
       </ul>
     </div>
   </div>
-</div>
+</nav>
