--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,14 @@
 <% provide(:title, 'Schipperius Infographic') %>
+
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
 	<%= render 'layouts/head' %>
 </head>
 
-<body data-spy="scroll" data-target=".navbar-example">
+<body id="home" data-spy="scroll" data-target=".nav-scroll">
 
 	<header>
 		<%= render 'layouts/header' %>
