--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top navbar-example" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top nav-scroll" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -10,12 +10,13 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
       	<li class="active"><a href="#home">InfoGraphic Resume</a></li>
-        <li><a href="#overview">Overview</a></li>
+        <li><a href="#overview">Product Manager</a></li>
         <li><a href="#summary">Summary</a></li>
-        <li><a href="#knowledge">Knowledge and Skills</a></li>
+        <li><a href="#knowledge">Knowledge</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#employment">Employment</a></li>
         <li><a href="#education">Education</a></li>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
   </div>
 </nav>
